@@ -3,6 +3,7 @@ Emulation fixes:
  - GBA Video: Fix scanline cache with scale factor change edge cases
  - GBA DMA: Fix DMA0-2 lengths (fixes mgba.io/i/1344)
  - GB Video: Fix window y changing mid-window (fixes mgba.io/i/1345)
+ - GB Video: Fix more window edge cases (fixes mgba.io/i/1346)
 Other fixes:
  - Qt: More app metadata fixes
  - Qt: Fix load recent from archive (fixes mgba.io/i/1325)
